add Ch8-MetalMaterial,but has bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,8 @@
     "streambuf": "cpp",
     "typeinfo": "cpp",
     "condition_variable": "cpp",
-    "mutex": "cpp"
+    "mutex": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp"
   }
 }
